--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -24,11 +24,11 @@
     "incomplete-dir-enabled": true,
     "inhibit-desktop-hibernation": false,
     "lpd-enabled": false,
-    "main-window-height": 304,
+    "main-window-height": 383,
     "main-window-layout-order": "menu,toolbar,filter,list,statusbar",
-    "main-window-width": 688,
-    "main-window-x": 815,
-    "main-window-y": 192,
+    "main-window-width": 557,
+    "main-window-x": 730,
+    "main-window-y": 32,
     "message-level": 2,
     "open-dialog-dir": "/boot/home",
     "peer-limit-global": 200,
@@ -61,8 +61,8 @@
     "rpc-whitelist-enabled": true,
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "",
-    "show-backup-trackers": false,
-    "show-extra-peer-details": false,
+    "show-backup-trackers": true,
+    "show-extra-peer-details": true,
     "show-filterbar": false,
     "show-notification-area-icon": false,
     "show-options-window": true,
