--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -2,38 +2,35 @@ mpd_music_dir = /Data/Zene
 ncmpcpp_directory = ~/config/settings/ncmpcpp
 lyrics_directory = ~/config/settings/ncmpcpp/lyrics
 
-user_interface = "alternative"
+# Playlist look
+playlist_display_mode = "classic"
+song_status_format = "$8%a$9 - $8%t$9"
+# song_list_format = "$2{%A}|{%a}$8 $4::$8 $5%t$8 {$R%b $8}"
+# song_list_format = "$2{%A}|{%a}$8 $4::$8 $5%t$8 {$R%b $8}"
+# song_list_format = "$6{%A}|{%a}$8 $4::$8 $3%t$8 {$R%b $4}"
+# song_list_format = "$2{%A}|{%a}$8 $4::$8 $5%t$8 {$R%l $8}"
+song_list_format = "$6{%A}|{%a}$8 $4::$8 $3%t$8 {$R%l $4}"
+# song_list_format = "$2{%A}|{%a}$8 $4::$8 $5%t$8"
+# song_list_format = "$2{%A}|{%a}$8 $4::$8 $5%t$8"
+# song_status_format = "$1%t $0%a"
+now_playing_prefix = "$2> "
+now_playing_suffix = "$2$/u$2"
 
-alternative_header_first_line_format = "$(11)─┤ $b$(13)%a$(end)$/b ├─$(end)"
-alternative_header_second_line_format = "$(4)%t (%y)$(end)"
-alternative_ui_separator_color = 11
-
-color1 = 13
-color2 = 15
-main_window_highlight_color = cyan
-main_window_color = 13
-
-now_playing_prefix = "$b"
-now_playing_suffix = "$/b"
-song_list_format = "    $(15)%t$(end)$R $(11)%A$(end) ($(cyan)%l$(end))    "
-song_columns_list_format = "(40)[15]{t|f} (25)[13]{a} (25)[11]{b} (5)[cyan]{l}"
-browser_playlist_prefix = "$(11) playlist $(end) "
-active_column_color = 4
-
-progressbar_color = 1
-progressbar_elapsed_color = 11
-progressbar_look = "──━"
-song_status_format = " $(15)%a$(end) $4⟫$7⟫$0 $(13)%t$(end) $4⟫$7⟫$0  $(11)%b$(end)"
-
-mouse_support = "yes"
 header_visibility = "no"
-statusbar_visibility = "yes"
-playlist_display_mode = "classic" (classic/columns)
-browser_display_mode = "columns"
-search_engine_display_mode = "columns"
-playlist_editor_display_mode = "columns"
 autocenter_mode = "yes"
-titles_visibility = "no"
-enable_window_title = "no"
+statusbar_visibility = "no"
+main_window_highlight_color = "white"
+discard_colors_if_item_is_selected = "yes"
 
-system_encoding = "utf8"
+# Progressbar look
+progressbar_look = "___"
+# progressbar_look = "⠒⠒⠐"
+progressbar_color = "black"
+progressbar_elapsed_color = "white"
+progressbar_boldness = "yes"
+
+# Misc
+display_bitrate = "yes"
+enable_window_title = "no"
+follow_now_playing_lyrics = "yes"
+ignore_leading_the = "yes"
